section 4th 5th

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
         </div>
       </section>
 
-      <!-- Learn a language in a playful way (1st page)  ///////////// -->
-      <div class="flex pt-10 w-[100%]">
+      <!--1st section under hero-section ///////////// -->
+      <section class="flex pt-10 w-[100%]">
         <div class="w-[65%]">
           <img src="assets/images/image 8.png" alt="girl image" />
         </div>
@@ -183,10 +183,10 @@
             </h1>
           </div>
         </div>
-      </div>
-      <!-- Increase your vocabulary (2nd page) //////////// -->
+      </section>
+      <!-- 2nd section //////////// -->
 
-      <div class="flex bg-[#f4f4f2] pt-10 justify-center items-center">
+      <section class="flex bg-[#f4f4f2] pt-10 justify-center items-center">
         <div class="p-10">
           <h1 class="text-4xl font-extrabold">Increase your vocabulary</h1>
           <p class="text-gray-500 text-xl font-semibold pt-8">
@@ -203,9 +203,9 @@
         <div>
           <img src="assets/images/image 2.png" alt="girlwith books" />
         </div>
-      </div>
-      <!-- Watch your progress every day(3rd page) /////////////-->
-      <div class="flex pt-10 justify-center items-center">
+      </section>
+      <!-- 3rd section /////////////-->
+      <section class="flex pt-10 justify-center items-center">
         <div class="pl-10">
           <img src="assets/images/image 1.png" alt="students learning" />
         </div>
@@ -227,34 +227,140 @@
             </button>
           </div>
         </div>
-      </div>
-      <!-- Sprit(4th page)/////////////////// -->\
+      </section>
+      <!-- 4th section/////////////////// -->\
 
-      <!-- background Div//////////////// -->
-      <div
-        class="border-2 border-[#f6f5f4]-200 bg-[#f6f5f4] w-[100%] h-auto px-20 py-10"
+      <!-- background section //////////////// -->
+      <section
+        class="border-2 border-[#f6f5f4] bg-[#f6f5f4] w-[100%] h-auto px-20 py-10"
       >
-        <div class="bg-[#ffffff] rounded-xl">
+        <div class="bg-[#ffffff] rounded-xl flex py-10 px-10 w-[100%]">
           <!-- image//////////////// -->
-          <div>
+          <div class="w-[70%]">
             <img src="assets/images/image 30.png" alt="girl run" />
           </div>
           <!-- text////////////////// -->
           <div>
-            <h1>Sprit</h1>
-            <p>
+            <div class="flex gap-3 pt-12">
+              <h1 class="text-5xl font-extrabold">Sprit</h1>
+              <button
+                class="text-[#2b788b] text-sm font-medium bg-[#c3dce3] mt-4 rounded-md w-[5rem] h-[1.5rem] hover:text-white hover:bg-[#2b788b]"
+              >
+                speed tast
+              </button>
+            </div>
+            <p class="text-gray-500 text-xl font-semibold w-[100%] pt-5">
               Trains the skill of fast translation. You have to choose if the
               translation corresponds to the suggested word.
             </p>
-            <h2>Choose a level:</h2>
-            <div></div>
+            <p class="text-2xl font-bold text-gray-500 pt-6">Choose a level:</p>
+            <div class="flex gap-5 py-5">
+              <p
+                class="font-bold text-md text-[#639b6d] border-4 border-[#639b6d] w-[3rem] h-[3rem] rounded-full flex items-center justify-center"
+              >
+                A1
+              </p>
+
+              <p
+                class="font-bold text-md text-[#c4a263] border-4 border-[#c4a263] w-[3rem] h-[3rem] rounded-full flex items-center justify-center"
+              >
+                A1
+              </p>
+
+              <p
+                class="font-bold text-md text-[#cb5b4f] border-4 border-[#cb5b4f] w-[3rem] h-[3rem] rounded-full flex items-center justify-center"
+              >
+                B2
+              </p>
+
+              <p
+                class="font-bold text-md text-[#a95151] border-4 border-[#a95151] w-[3rem] h-[3rem] rounded-full flex items-center justify-center"
+              >
+                B2
+              </p>
+
+              <p
+                class="font-bold text-md text-[#a15993] border-4 border-[#a15993] w-[3rem] h-[3rem] rounded-full flex items-center justify-center"
+              >
+                C1
+              </p>
+
+              <p
+                class="font-bold text-md text-[#5996a5] border-4 border-[#5996a5] w-[3rem] h-[3rem] rounded-full flex items-center justify-center"
+              >
+                C2
+              </p>
+            </div>
             <div>
               <button
-                class="border-2 border-[#2b788b] text-white text-md font-bold bg-[#2b788b] rounded-3xl w-[8rem] h-[2.5rem] hover:text-[#2b788b] hover:bg-white hover:flex flex-col items-center justify-center"
+                class="border-2 border-[#2b788b] text-white text-md font-bold bg-[#2b788b] rounded-3xl w-[8rem] h-[2.8rem] hover:text-[#2b788b] hover:bg-white hover:tracking-widest"
               >
                 Get Started
               </button>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- 5th section/////////////////// -->
+
+      <!-- bakground div'///////////////////////////// -->
+      <div
+        class="border-2 border-[#f6f5f4] bg-[#f6f5f4] w-[100%] h-auto flex gap-5 px-5 py-10"
+      >
+        <!--  part-1 /////////////////// -->
+        <div
+          class="bg-white w-[35%] h-auto rounded-xl py-10 flex flex-col justify-center items-center"
+        >
+          <div>
+            <img src="assets/images/image 33.png" alt="hat" />
+          </div>
+          <h1 class="text-4xl font-extrabold">Your Audio-Call</h1>
+          <p class="text-gray-500 text-xl font-semibold pt-1">
+            You did pretty good!
+          </p>
+          <!-- circle-1////////////////////// -->
+          <div class="flex gap-3 pt-5">
+            <div
+              class="font-bold text-md border-4 border-[#5996a5] w-[7.5rem] h-[7.5rem] rounded-full flex flex-col items-center justify-center"
+            >
+              <p class="text-xl font-semibold">remains</p>
+              <h1 class="text-4xl font-extrabold">
+                <i class="fa-solid fa-heart text-[#945069]"></i>4
+              </h1>
+              <p class="text-gray-500 text-xl font-semibold pt-1">Lives</p>
+            </div>
+            <!-- circle-2 /////////////////////////////////////// -->
+            <div
+              class="font-bold text-md border-4 flex flex-col border-[#639b6d] w-[7.5rem] h-[7.5rem] rounded-full flex items-center justify-center"
+            >
+              <p class="text-xl font-semibold">20/</p>
+              <h1 class="text-4xl font-extrabold">10</h1>
+              <p class="text-gray-500 text-xl font-semibold pt-1">Words</p>
+            </div>
+          </div>
+          <div class="pt-5 pb-3 flex gap-2">
+            <img src="assets/images/playagain.png" alt="loading" />
+            <p class="text-md font-bold">Play it again</p>
+          </div>
+          <!-- button/////////////////////// -->
+          <div>
+            <button
+              class="text-[#2b788b] text-lg font-bold bg-[#c3dce3] rounded-3xl w-[10rem] h-[2.5rem] hover:text-white hover:bg-[#2b788b]"
+            >
+              Go to textbook
+            </button>
+          </div>
+        </div>
+        <!-- part-2/////////////////////////// -->
+        <div class="bg-white rounded-xl w-[60%] h-auto my-10">
+          <div class="flex gap-2 pt-12">
+            <h1 class="text-4xl font-extrabold">I Know</h1>
+            <button
+              class="text-[#2b788b] text-sm font-medium bg-[#c3dce3] mt-4 rounded-md w-[5rem] h-[1.5rem] hover:text-white hover:bg-[#2b788b]"
+            >
+              15 words
+            </button>
           </div>
         </div>
       </div>
